# tip_clock

./: Cargo.toml  LICENSE  README.md  config.toml
res/: end.mscz  special.mscz  start.mscz
src/: audio.rs  config.rs  main.rs
