[package]
name = "tip_clock"
version = "0.1.6"
edition = "2024"

[profile.release]
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[dependencies]
chrono = "0.4.45"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
tray-icon = "0.24.1"
single-instance = "0.3.3"
